fix(组织设置): del user project